Remove unnecessary things and finish feature implementing
